--- a/src/ulp/Vistas/FormularioNotas.form
+++ b/src/ulp/Vistas/FormularioNotas.form
@@ -136,6 +136,7 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="comboAlumno">
           <Properties>
+            <Property name="maximumRowCount" type="int" value="15"/>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="0"/>
             </Property>
@@ -197,6 +198,7 @@
         </Component>
         <Component class="javax.swing.JComboBox" name="comboNota">
           <Properties>
+            <Property name="maximumRowCount" type="int" value="11"/>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="11">
                 <StringItem index="0" value="0"/>
